--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
       src="http://kit.fontawesome.com/c8e4d183c2.js"
       crossorigin="anonymous"
     ></script>
+    <script src="index.js"></script>
   </head>
   <body>
     <section id="landing">
@@ -26,25 +27,30 @@
             <li><a href="#" class="nav__link">Contact</a></li>
             <li><a href="#" class="nav__link nav__link--primary">Books</a></li>
           </ul>
-        </div>
-        <button class="btn__menu">
-          <i class="fas fa-bars"></i>
-        </button>
-        <div class="menu__backdrop">
-          <button class="btn__menu btn__menu--close">
-            <i class="fas fa-times"></i>
+
+          <button class="btn__menu" onclick="openMenu()">
+            <i class="fas fa-bars"></i>
           </button>
-          <ul>
-            <li class="menu__list">
-              <a href="#" class="menu__link">Home</a>
-            </li>
-            <li class="menu__list">
-              <a href="#featured" class="menu__link">Books</a>
-            </li>
-            <li class="menu__list">
-              <a class="menu__link no-cursor">Contact</a>
-            </li>
-          </ul>
+          <div class="menu__backdrop">
+            <button class="btn__menu btn__menu--close" onclick="closeMenu()">
+              <i class="fas fa-times"></i>
+            </button>
+            <ul class="menu__links">
+              <li class="menu__list">
+                <a href="#" class="menu__link" onclick="closeMenu()">Home</a>
+              </li>
+              <li class="menu__list">
+                <a href="#featured" class="menu__link" onclick="closeMenu()"
+                  >Books</a
+                >
+              </li>
+              <li class="menu__list">
+                <a class="menu__link no-cursor" onclick="closeMenu()"
+                  >Contact</a
+                >
+              </li>
+            </ul>
+          </div>
         </div>
       </nav>
       <header>
@@ -54,7 +60,9 @@
             <h2>
               Find your dream book with <span class="purple">Library</span>
             </h2>
-            <button class="btn">Browse books</button>
+            <a href="#featured">
+              <button class="btn">Browse books</button>
+            </a>
           </div>
           <figure class="header__img--wrapper">
             <img src="./assets/Undraw_Books.svg" alt="" />
@@ -170,11 +178,7 @@
               </div>
               <div class="book">
                 <figure class="book__img--wrapper">
-                  <img
-                    class="book__img"
-                    src="./assets/deep work.jpeg"
-                    alt=""
-                  />
+                  <img class="book__img" src="./assets/deep work.jpeg" alt="" />
                 </figure>
                 <div class="book__title">Deep Work</div>
                 <div class="book__ratings">
@@ -195,15 +199,13 @@
       <section id="Latest">
         <div class="container">
           <div class="row">
-            <h2 class="section__title">Latest <span class="purple">books</span></h2>
+            <h2 class="section__title">
+              Latest <span class="purple">books</span>
+            </h2>
             <div class="books__latest">
               <div class="book">
                 <figure class="book__img--wrapper">
-                  <img
-                    class="book__img"
-                    src="./assets/book-1.jpeg"
-                    alt=""
-                  />
+                  <img class="book__img" src="./assets/book-1.jpeg" alt="" />
                 </figure>
                 <div class="book__title">The 10X Rule</div>
                 <div class="book__ratings">
@@ -213,17 +215,11 @@
                   <i class="fas fa-star"></i>
                   <i class="fas fa-star-half-alt"></i>
                 </div>
-                <div class="book__price">
-                  $32.95
-                </div>
+                <div class="book__price">$32.95</div>
               </div>
               <div class="book">
                 <figure class="book__img--wrapper">
-                  <img
-                    class="book__img"
-                    src="./assets/book-2.jpeg"
-                    alt=""
-                  />
+                  <img class="book__img" src="./assets/book-2.jpeg" alt="" />
                 </figure>
                 <div class="book__title">Be Obsessed or be Average</div>
                 <div class="book__ratings">
@@ -233,17 +229,11 @@
                   <i class="fas fa-star"></i>
                   <i class="fas fa-star-half-alt"></i>
                 </div>
-                <div class="book__price">
-                  $51.95
-                </div>
+                <div class="book__price">$51.95</div>
               </div>
               <div class="book">
                 <figure class="book__img--wrapper">
-                  <img
-                    class="book__img"
-                    src="./assets/book-3.jpeg"
-                    alt=""
-                  />
+                  <img class="book__img" src="./assets/book-3.jpeg" alt="" />
                 </figure>
                 <div class="book__title">Rich Dad Poor Dad</div>
                 <div class="book__ratings">
@@ -253,17 +243,11 @@
                   <i class="fas fa-star"></i>
                   <i class="fas fa-star-half-alt"></i>
                 </div>
-                <div class="book__price">
-                  $69.69
-                </div>
+                <div class="book__price">$69.69</div>
               </div>
               <div class="book">
                 <figure class="book__img--wrapper">
-                  <img
-                    class="book__img"
-                    src="./assets/book-4.jpeg"
-                    alt=""
-                  />
+                  <img class="book__img" src="./assets/book-4.jpeg" alt="" />
                 </figure>
                 <div class="book__title">Cash Flow Quadrant</div>
                 <div class="book__ratings">
@@ -273,17 +257,11 @@
                   <i class="fas fa-star"></i>
                   <i class="fas fa-star-half-alt"></i>
                 </div>
-                <div class="book__price">
-                  $9.95
-                </div>
+                <div class="book__price">$9.95</div>
               </div>
               <div class="book">
                 <figure class="book__img--wrapper">
-                  <img
-                    class="book__img"
-                    src="./assets/book-5.jpeg"
-                    alt=""
-                  />
+                  <img class="book__img" src="./assets/book-5.jpeg" alt="" />
                 </figure>
                 <div class="book__title">Power</div>
                 <div class="book__ratings">
@@ -293,17 +271,11 @@
                   <i class="fas fa-star"></i>
                   <i class="fas fa-star-half-alt"></i>
                 </div>
-                <div class="book__price">
-                  $29.95
-                </div>
+                <div class="book__price">$29.95</div>
               </div>
               <div class="book">
                 <figure class="book__img--wrapper">
-                  <img
-                    class="book__img"
-                    src="./assets/book-6.jpeg"
-                    alt=""
-                  />
+                  <img class="book__img" src="./assets/book-6.jpeg" alt="" />
                 </figure>
                 <div class="book__title">The 5 Second Rule</div>
                 <div class="book__ratings">
@@ -313,17 +285,11 @@
                   <i class="fas fa-star"></i>
                   <i class="fas fa-star-half-alt"></i>
                 </div>
-                <div class="book__price">
-                  $27.95
-                </div>
+                <div class="book__price">$27.95</div>
               </div>
               <div class="book">
                 <figure class="book__img--wrapper">
-                  <img
-                    class="book__img"
-                    src="./assets/book-7.jpg"
-                    alt=""
-                  />
+                  <img class="book__img" src="./assets/book-7.jpg" alt="" />
                 </figure>
                 <div class="book__title">Your Next Five Moves</div>
                 <div class="book__ratings">
@@ -333,17 +299,11 @@
                   <i class="fas fa-star"></i>
                   <i class="fas fa-star-half-alt"></i>
                 </div>
-                <div class="book__price">
-                  $45.95
-                </div>
+                <div class="book__price">$45.95</div>
               </div>
               <div class="book">
                 <figure class="book__img--wrapper">
-                  <img
-                    class="book__img"
-                    src="./assets/book-8.jpeg"
-                    alt=""
-                  />
+                  <img class="book__img" src="./assets/book-8.jpeg" alt="" />
                 </figure>
                 <div class="book__title">Mastery</div>
                 <div class="book__ratings">
@@ -353,9 +313,7 @@
                   <i class="fas fa-star"></i>
                   <i class="fas fa-star-half-alt"></i>
                 </div>
-                <div class="book__price">
-                  $299.95
-                </div>
+                <div class="book__price">$299.95</div>
               </div>
             </div>
           </div>
@@ -364,7 +322,9 @@
       <section id="explore">
         <div class="explore__container">
           <div class="row__column">
-            <h2 class="section__title">Explore more <span class="purple">Books</span></h2>
+            <h2 class="section__title">
+              Explore more <span class="purple">Books</span>
+            </h2>
             <a href="#featured">
               <button class="btn">Browse Books</button>
             </a>
@@ -377,16 +337,20 @@
         <div class="row row__column">
           <a href="#">
             <figure class="footer__logo">
-              <img src="./assets/Library.svg" class="footer__logo--img" alt="">
+              <img
+                src="./assets/Library.svg"
+                class="footer__logo--img"
+                alt=""
+              />
             </figure>
           </a>
-            <div class="footer__list">
-              <a href="#" class="footer__link">Home</a>
-              <a class="footer__link no-cursor">About</a>
-              <a href="#featured" class="footer__link">Books</a>
-              <a class="footer__link no-cursor">Contact</a>
-            </div>
-            <div class="footer__copyright">Copyright &copy; 2021 Library</div>
+          <div class="footer__list">
+            <a href="#" class="footer__link">Home</a>
+            <a class="footer__link no-cursor">About</a>
+            <a href="#featured" class="footer__link">Books</a>
+            <a class="footer__link no-cursor">Contact</a>
+          </div>
+          <div class="footer__copyright">Copyright &copy; 2021 Library</div>
         </div>
       </div>
     </footer>
