--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       rel="stylesheet"
     />
     <script
-      src="http://kit.fontawesome.com/c8e4d183c2.js"
+      src="https://kit.fontawesome.com/c8e4d183c2.js"
       crossorigin="anonymous"
     ></script>
     <script src="index.js"></script>
